www/css/index.css
#nitnenm_baani_container,
.list-group {
    margin-top: 50px;
    margin-bottom: 0px;
}

.navbar-toggle .icon-bar {
	width: 3px;
	height: 3px;
	border-radius: 50%;
}

#baani_container {
	position: relative;
	padding-top: 50px;
	padding-bottom: 20px;
}

#baani_container .carousel .carousel-inner .item .carousel-caption {
	position: initial;
	text-shadow: none;
}

#baani_container .footer {
	position: fixed;
	bottom: 0;
	height: 40px;
    line-height: 40px;
    text-align: center;
    width: 100%;
    color: #FFF;
    background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
}

.carousel-control.left, .carousel-control.right {
	background: none;
	position: fixed;
	color: red;
	opacity: 1;
}

a.list-group-item:hover,
a.list-group-item:focus {
    background-color: #f0ad4e !important;
}

// Classes
.show {
    display: block !important;
}

.hidden {
    display: none !important;
    visibility: hidden !important;
}

.invisible {
    visibility: hidden;
}

@font-face {
    font-family: 'Dejaweb';
    src: url('NotoSansGurmukhi-Regular.ttf');
}

.baaniFormatting h1 {
    font-family: 'Dejaweb';
    /*font-size: 1.5em;*/
}

.baaniFormatting p {
    font-size: 25px;
    margin: 5px;
    color: #282460
}

.baaniFormatting span {
    line-height: 1.8;
    word-wrap: normal;
    display: inline-block;
}

.highlight {
    background: #F7941E;
    color: #FFFFFF;
}

span {
    border-radius: 10px;
}

.baaniFormatting h1 {
    color: #F7941E !important;
}

.baaniFormatting h4 {
    color: #F7941E !important;
}

.baaniFormatting pre {
    text-align: center;
    color: #EF2938;
}

.highlightH1 {
    background: #F7941E;
    color: #FFFFFF;
}

.highlightP {
    background: #282460;
    color: #FFFFFF;
}

